fixed two scrollbars on mobile tweet drawer

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -69,6 +69,9 @@ a.forgot-pass:hover {
     padding-top: 30px;
 }
 
+.hide-overflow {
+    overflow-y: hidden!important;
+}
 
 /* Overrides */
 .primary {
